--- a/debian/wndbx/DEBIAN/control
+++ b/debian/wndbx/DEBIAN/control
@@ -1,8 +1,8 @@
 Package: wndbx
 Version: 1.1-B
 Architecture: all
-Maintainer: William "WiSP" Popovici <admin@wispnet.org>
+Maintainer: WISPNET <admin@wispnet.org>
 Description: WISPNET DataBase X
  A simple Python-based SQLlite profile database application.
 Depends: python3, sqlite3, python3-tk
-Installed-Size: 76 KiB
+Installed-Size: 76
