--- a/debian/wndbx/usr/share/applications/wndbx.desktop
+++ b/debian/wndbx/usr/share/applications/wndbx.desktop
@@ -6,4 +6,4 @@ Icon=/usr/share/pixmaps/wndbx.svg
 Terminal=false
 Type=Application
 Categories=Utility;
-Name[en_US]=wndbx.desktop
+Name[en_US]=wndbx
